# pulse-bot

./: .gitignore  Cargo.toml  GuildChannels.json  Makefile.toml  PartialGuild.json  SchefuledEvents.json
.cargo/: example.config.toml
src/: autocomplete.rs  commands.rs  globals.rs  lib.rs  main.rs  structs.rs
src/autocomplete/: database.rs
src/commands/: channels.md  channels.rs  choices.md  choices.rs
src/structs/: channels.rs  user.rs
