[package]
name = "pulse-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
poise = "0.5.5"
serde = "1.0.183"
serde_json = "1.0.104"
serenity = {version = "0.11.6", default_features = false, features=["http"]}
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
